[gd_scene load_steps=20 format=3 uid="uid://daonj4ixmq6bu"]

[ext_resource type="Texture2D" uid="uid://bfeb4f7gkvgn" path="res://Sprites/balltexture (1).png" id="1_hkmo2"]
[ext_resource type="Script" path="res://Scripts/botgame.gd" id="1_uj100"]
[ext_resource type="PackedScene" uid="uid://c1nkq3fcyd38a" path="res://Scenes/trail.tscn" id="2_kchag"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_kuyyi"]
[ext_resource type="Texture2D" uid="uid://dfy8rdnmtb6jd" path="res://Sprites/i.svg" id="3_3coc7"]
[ext_resource type="Script" path="res://Scripts/ballbot.gd" id="3_kqrpe"]
[ext_resource type="Script" path="res://Scripts/cpubot.gd" id="3_yp00r"]
[ext_resource type="AudioStream" uid="uid://bghrwfof83cj5" path="res://Sounds/Лох.mp3" id="5_p1mwt"]
[ext_resource type="Script" path="res://Scripts/balltrail.gd" id="6_1wixx"]
[ext_resource type="AudioStream" uid="uid://bixlusbcdb3kr" path="res://Sounds/на лаки.mp3" id="6_pikh5"]
[ext_resource type="PackedScene" uid="uid://coomb6j6sxjcu" path="res://Scenes/pause.tscn" id="7_krc6b"]
[ext_resource type="Texture2D" uid="uid://wy23bgsqla0e" path="res://Sprites/pausebutton.png" id="8_jec7j"]
[ext_resource type="AudioStream" uid="uid://brhvs6necbim7" path="res://Sounds/Dink_n.mp3" id="9_rsw55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obd8f"]
size = Vector2(40, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_xcubb"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pjn8"]
size = Vector2(20, 1152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubvl7"]
size = Vector2(648, 20)

[sub_resource type="Animation" id="Animation_mvffw"]
resource_name = "timer_anim"
length = 2.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("startanim/timer_animation:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8, 1.6, 2.39),
"transitions": PackedFloat32Array(1.00933, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", ""]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w41hr"]
_data = {
"timer_anim": SubResource("Animation_mvffw")
}

[node name="main" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0156863, 0.133333, 1)
script = ExtResource("1_uj100")

[node name="whiteline" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 568.0
offset_right = 648.0
offset_bottom = 584.0

[node name="player1" type="StaticBody2D" parent="."]
position = Vector2(324, 1082)
script = ExtResource("2_kuyyi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1"]
position = Vector2(0, -18.5)
shape = SubResource("RectangleShape2D_obd8f")

[node name="ColorRect" type="ColorRect" parent="player1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="cpu" type="StaticBody2D" parent="."]
position = Vector2(324, 50)
script = ExtResource("3_yp00r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cpu"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_obd8f")

[node name="ColorRect" type="ColorRect" parent="cpu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ball" type="CharacterBody2D" parent="."]
position = Vector2(324, 576)
scale = Vector2(2, 2)
collision_mask = 3
script = ExtResource("3_kqrpe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource("CircleShape2D_xcubb")

[node name="balltexture" type="Sprite2D" parent="ball"]
scale = Vector2(0.155, 0.155)
texture = ExtResource("1_hkmo2")

[node name="trail" parent="ball" instance=ExtResource("2_kchag")]
z_index = 1
script = ExtResource("6_1wixx")
MAX_LENGTH = 7

[node name="borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="left" type="CollisionShape2D" parent="borders"]
position = Vector2(-10, 576)
shape = SubResource("RectangleShape2D_8pjn8")

[node name="right" type="CollisionShape2D" parent="borders"]
position = Vector2(658, 576)
shape = SubResource("RectangleShape2D_8pjn8")

[node name="score up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="score up"]
position = Vector2(324, -10)
shape = SubResource("RectangleShape2D_ubvl7")

[node name="score down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="score down"]
position = Vector2(324, 1162)
shape = SubResource("RectangleShape2D_ubvl7")

[node name="buttons" type="Node" parent="."]

[node name="left" type="TouchScreenButton" parent="buttons"]
show_behind_parent = true
visibility_layer = 0
position = Vector2(0, 580)
scale = Vector2(2.57812, 4.4375)
texture_normal = ExtResource("3_3coc7")
action = "left"

[node name="right" type="TouchScreenButton" parent="buttons"]
show_behind_parent = true
visibility_layer = 0
position = Vector2(324, 580)
scale = Vector2(2.57812, 4.4375)
texture_normal = ExtResource("3_3coc7")
action = "right"

[node name="audio" type="Node" parent="."]

[node name="dink" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("9_rsw55")
volume_db = 5.0
bus = &"dink"

[node name="loh" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("5_p1mwt")
bus = &"goal"

[node name="lucky" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("6_pikh5")
bus = &"goal"

[node name="balltimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="pausemenu" parent="." instance=ExtResource("7_krc6b")]
visible = false
layout_mode = 1

[node name="pause" type="TouchScreenButton" parent="."]
position = Vector2(284, 450)
scale = Vector2(5, 5)
texture_normal = ExtResource("8_jec7j")
action = "stop"

[node name="startanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w41hr")
}

[node name="timer_animation" type="Label" parent="startanim"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -171.0
offset_right = 4.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 250

[node name="score" type="CanvasLayer" parent="."]

[node name="playerscore" type="Label" parent="score"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 74.0
offset_right = 30.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "0"

[node name="player2score" type="Label" parent="score"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -126.0
offset_right = 90.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
theme_override_font_sizes/font_size = 100
text = "0"

[connection signal="body_entered" from="score up" to="." method="_on_score_up_body_entered"]
[connection signal="body_entered" from="score down" to="." method="_on_score_down_body_entered"]
[connection signal="timeout" from="balltimer" to="." method="_on_balltimer_timeout"]
